# ttyrell

./: Cargo.toml  LICENSE  README.md  ideas.md  install.sh
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-05_153000-fix-terminal-size-and-scroll.md  2026-07-05_154500-fix-file-write-parsing.md
docs/: llm-providers.md  writing-plugins.md
lua/: init.lua  init.lua.template  llm.lua  secret_guard.lua
lua/plugins/: activity_log.lua  ai_query.lua  error_help.lua  file_guard.lua  session_log.lua  workflow_journal.lua
shell/: integration.bash  integration.fish  integration.ps1  integration.zsh
src/: install.rs  lua_api.rs  main.rs  osc.rs  proxy.rs
