[package]
name = "ttyrell"
version = "0.3.0"
edition = "2024"

[dependencies]
portable-pty = "0.8"
bytes = "1"
anyhow = "1"
mlua = { version = "0.11", features = ["lua55", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
dirs = "6"
include_dir = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
